# recall_io

./: .gitignore  design.txt  folder_structure.md  plan.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py
backend/app/models/: note.py  user.py
backend/app/repositories/: note_repository.py  user_repository.py
backend/app/routes/: __init__.py  notes.py  users.py
backend/app/schemas/: note.py  user.py
backend/app/services/: note_service.py  user_service.py
backend/tests/: conftest.py  test_config.py  test_database.py  test_generate_embeddings.py  test_note_repository.py  test_note_schemas.py  test_note_service.py  test_user_repository.py  test_user_routes.py  test_user_schemas.py  test_user_service.py
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/styles/: app.css  reset.css
