[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-parametrize>=1.6.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
